javascript 문법,object,json

--- a/15.hphk_javascript.md
+++ b/15.hphk_javascript.md
@@ -354,3 +354,154 @@ me.appleProducts.iphone //"xs"
 
 ```
 
+```javascript
+//ES5
+// var books =['자바스크립트 입문','장고 웹 프로그래밍']
+// var comics = {
+//   'DC':['Aquaman','Joker'],
+//   'Marvel':['Avengers','Spider Man']
+// }
+// var magazines = null
+// var bookShop = {
+//   books: books,
+//   comics: comics,
+//   magazines:magazines
+// }
+// console.log(bookShop)
+// console.log(typeof bookShop) // object
+// console.log(bookShop.books[0])
+//ES6(ECMAScript 6)
+//객체의 key와 value가 똑같으면 -> 배열처럼 한번만 작성가능
+var books =['자바스크립트 입문','장고 웹 프로그래밍']
+var comics = {
+  'DC':['Aquaman','Joker'],
+  'Marvel':['Avengers','Spider Man']
+}
+var magazines = null
+var bookShop = {
+  books,
+  comics,
+  magazines,
+}
+console.log(bookShop)
+console.log(typeof bookShop) // object
+console.log(bookShop.books[0])
+
+
+```
+
+```bash
+#/TIL/06_javascript (master)
+$ node 06_object2.js
+{
+  books: [ '자바스크립트 입문', '장고 웹 프로그래밍' ],
+  comics: { DC: [ 'Aquaman', 'Joker' ], Marvel: [ 'Avengers', 'Spider Man' ] },
+  magazines: null
+}
+object
+자바스크립트 입문
+```
+
+
+
+### JSON
+
+> javaScript Object Notation - JavaScript객체 표기법
+
+- 웹에서 데이터 주고받을 때 형식으로 대표적으로 JSON, XML, YAML등이 있다 주고 JSON을 사용한다.
+- Key-Value 형태의 자료구조를 JavaScript Object와 유사한 모습으로 표현하는 표기법
+- 하지만 JSON은 모습만 비슷할 뿐이고, 실제로 Object처럼 사용하려면 다른 언어들과 마찬가지로 Parsing(구문분석)하는 작업이 필요하다
+
+```javascript
+// Object => String
+const jsonData = JSON.stringify({
+  '도현':'합기도',
+  '혁진':'감자',
+})
+console.log(jsonData)         //{"도현":"합기도","혁진":"감자"}
+console.log(typeof jsonData)  //string
+
+//String => Object
+const parseData = JSON.parse(jsonData)
+console.log(parseData)        //{ '도현': '합기도', '혁진': '감자' }
+console.log(typeof parseData) //object
+
+/*
+  [Object vs JSON 간단정리]
+  - Object : JavaScript의  Key-Value 페어의 자료구조
+  - JSON : 데이터를 표현하기 위한 단순 문자열(string)
+*/
+```
+
+### 8. Array Helper Method
+
+> Helper란 자주 사용하는 로직을 재활용할 수 있게 만든 일종의 Library 이고 ES6부터 본격적으로 사용되기 시작했다
+
+- 상세한 사용법 =>  MDN 참고
+
+#### 8.1 forEach
+
+- arr.forEach(callback(element, index, array))
+- 주어진 callback을 배열에 있는 각 요소에 대해 한번씩 실행
+
+```javascript
+//ES5 for loop
+var iot1 = ['도현','혁진','은애']
+for(var i=0;i < iot1.length; i++){
+  console.log(iot1[i])
+}
+
+//ES6+
+const IOT1 = ['수연','승찬','한석','경희','영선']
+IOT1.forEach(function(student){
+  console.log(student)
+})
+
+//한줄로 리팩토리 가능
+IOT1.forEach(student => console.log(student))
+
+//forEach는 기본으로 들어오는 return값은 없다
+const result  = IOT1.forEach(student => console.log(student))
+console.log(result) //undefined
+
+```
+
+```javascript
+//[실습] for를 forEach로 바꾸기
+function handleStudents(){
+  const students =[
+    {id:1,name:'오은애',status:'응애?'},
+    {id:12,name:'서혁진',status:'기염둥이..'},
+    {id:28,name:'김영선',status:'너무쉽네js'},
+  ]
+
+  // for(let i=0;i < students.length; i++){
+  //   console.log(students[i])
+  //   console.log(students[i].name)
+  //   console.log(students[i].status)
+  // }
+  students.forEach(student => {
+    console.log(student)
+    console.log(student.name)
+    console.log(student.status)
+  })
+}
+handleStudents()
+```
+
+```javascript
+//[실습] images 배열 안에 있는 정보를 곱해 넓이를 구하여 areas배열에 저장하시오
+const images = [
+  {height: 30, width:55},
+  {height: 50, width:178},
+  {height: 81, width:35},
+]
+const areas = []
+//forEach활용
+images.forEach(img =>{
+  areas.push(img.height * img.width)
+})
+
+console.log(areas)
+```
+
