--- a/15.hphk_javascript.md
+++ b/15.hphk_javascript.md
@@ -254,7 +254,7 @@ console.log(typeof returnObject())
 const sayHello = (name='혁진') => `hi! ${name}`
 ```
 
-### 익명/1회용 함수(Anonymous function)
+#### 익명/1회용 함수(Anonymous function)
 
 > Javascript에서는 1회용으로 사용하는 함수는 이름을 짓지 않을 수 잇다. 
 >
@@ -404,7 +404,7 @@ object
 
 
 
-### JSON
+#### ※ JSON
 
 > javaScript Object Notation - JavaScript객체 표기법
 
