javascript axios get, post요청

--- a/17.hphk_javascript_axios.md
+++ b/17.hphk_javascript_axios.md
@@ -1,6 +1,6 @@
 ## 비동기 처리
 
-HTTP -> Ajax(HTTP를 효과적으로 황용) -> WebSocket
+HTTP -> Ajax(HTTP를 효과적으로 활용) -> WebSocket
 
 ### Axios (Javascript 라이브러리)
 
@@ -16,13 +16,14 @@ HTTP -> Ajax(HTTP를 효과적으로 황용) -> WebSocket
 
 ### 1.Dog and Cat
 
-#### 1.1 설치
+#### 1.1 설치( https://www.npmjs.com/package/axios 참고)
 ```bash
 #TIL/06_javascript (master)
 $ npm install axios
 ```
 
-#### axios 실행
+#### axios 사용 sample
+
 - /06_javascript/03_js_axios/01_axios.js 파일생성
 
 ```javascript
@@ -113,4 +114,215 @@ $ node 01_axios.js
 - XHR (XMLHttpRequest)
   - **브라우저는 XHR 객체를 이용해서 AJAX요청을 생성하고 전송한다**
   - 서버가 브라우저 요청에 응답 내용을 반환하면, XHR객체가 그 결과를 처리한다.
+
+### 2.1 좋아요 버튼 부-드럽게
+
+- 이전에 구현해둔 장고 코드에서는 좋아요 버튼을 누르면 페이지 전환을 통해 좋아요 기능이 이루어진다
+- `axios` 를 사용하면 페이지 전환없이 좋아요 기능을 구현할 수 있다
+### 2.1.0 CDN script 추가
+
+- 05_django_from => 06_django_axios 어플리케이션 복사 생성
+
+- config/templates/base.html 수정
+
+```html
+<head>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+</head>
+```
+
+### 2.1.1 Template 수정
+
+- config/templates/articles/_article.html 수정
+
+```html
+
+  <div class="col-12 col-md-6 mb-3">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">{{article.title}}</h5>
+        <p class="card-text">
+       
+        <!--사용자가 좋아요 누른 상태 - 꽉찬하트-->
+        {% if request.user in article.like_users.all %}
+          <i data-id="{{article.pk}}" class="like-button fas fa-heart" style="color:crimson; cursor:pointer;"></i>
+        {% else %}
+        <!--좋아요 안 누른상태 - 빈하트-->
+          <i data-id="{{article.pk}}" class="like-button fas fa-heart" style="cursor:pointer;"></i>
+        {% endif %}
+        <span id="like-count-{{ article.pk }}"> 
+        {{article.like_users.all|length}}
+        </span>
+        명이 이 글을 좋아합니다.<br>
+        {{article.created_at}}
+        </p>
+        <a href="{% url 'articles:detail' article.pk %}" class="btn btn-primary">상세보기</a>
+      </div>
+    </div>
+  </div>
+
+```
+
+
+### 2.1.3 View 수정
+
+- 좋아요 버튼의 articleId를 찾아서 좋아요 요청을 보냈을 때, View로직에서 보내준 boolean값에 따라 클래스를 지우거나 추가한다
+
+- redirect 응답에 대한 결과로 index.html을 받는게 아니라, JSON 형태로 응답 결과를 반환받는다
+
+- Django에서 제공하는 JsonResponse 를 사용해서 JSON형태로 결과를 반환 해보자
+
+  ```python
+  #공식문서 사용법
+  >>> from django.http import JsonResponse
+  >>> response = JsonResponse({'foo': 'bar'})
+  >>> response.content
+  b'{"foo": "bar"}'
+  ```
+
+```python
+#article/views.py
+...
+@login_required
+def like(request, article_pk):
+    #게시글 가져오기
+    article = get_object_or_404(Article, pk=article_pk)
+    #현재 접속하고 있는 유저
+    user = request.user
+
+    #현재 게시글을 좋아요 누른 사람 목록에 현재 접속한 유저가 있을 경우 -> 좋아요 취소
+    #if article.like_users.filter(pk=user.pk).exists():
+    if user in article.like_users.all():
+        article.like_users.remove(user)
+        liked = False
+    else:#목록에 없을 경우 좋아요 저장
+        article.like_users.add(user)
+        liked = True
+    
+    context = {
+        'liked':liked,
+        'count':article.like_users.count(),
+    }
+    return JsonResponse(context)
+```
+
+
+
+## 3. Like (POST 요청)
+
+- like 요청은 데이터베이스에 조작을 가하는 로직이기 때문에 GET요청이 아니라 POST 요청이 적절하다
+
+  ```
+  axios.post(...)
+  ```
+
+- https://docs.djangoproject.com/en/2.2/ref/csrf/  공식문서 참고
+  - config/templates/article/index.html 수정
+
+```html
+... 
+<script>
+  //1.좋아요 버튼 가져오기
+  const likeButtons = document.querySelectorAll('.like-button')
+  //2. forEash 함수 활용
+  likeButtons.forEach(button => {
+    button.addEventListener('click',function(event){
+      //event.target.classList, event.target.dataset.id
+      //1. data-id에 article.pk가 들어 있음 -> 동적 라우팅 활용
+      const articleId = event.target.dataset.id
+      axios.defaults.xsrfCookieName = 'csrftoken'
+      axios.defaults.xsrfHeaderName = 'X-CSRFToken'
+      //2. 해당 게시글 좋아요 요청 보내기
+      axios.post(`/articles/${articleId}/like/`)
+        .then(response => {
+          document.querySelector(`#like-count-${articleId}`).innerHTML = response.data.count
+
+          if(response.data.liked){
+            event.target.style.color ='crimson'
+          }else{
+            event.target.style.color ='black'
+          }
+        })
+        .catch(error => {
+          console.log(error)
+        })
+    })
+  })
+  </script>
+```
+
+### is_ajax() 분기
+
+- articles/views.py 수정
+
+  - import HttpResponseBadRequest
+  - if request.is_ajax(): 조건 추가
+
+  ```python
+  from django.http import JsonResponse, HttpResponseBadRequest
+  ...
+  
+  @login_required
+  def like(request, article_pk):
+      if request.is_ajax():
+          #게시글 가져오기
+          article = get_object_or_404(Article, pk=article_pk)
+          #현재 접속하고 있는 유저
+          user = request.user
+          
+          if user in article.like_users.all():
+              article.like_users.remove(user)
+              liked = False
+          else:#목록에 없을 경우 좋아요 저장
+              article.like_users.add(user)
+              liked = True
+          
+          context = {
+              'liked':liked,
+              'count':article.like_users.count(),
+          }
+          return JsonResponse(context)
+      else:
+          return HttpResponseBadRequest
+  ```
+
+- /config/articles/index.html 수정
+  - axios.defaults.headers.common['X-Requested-With'] = 'XMLHttpRequest' 추가
+  - {% if user.is_authenticated %}{% endif %}  조건추가
+
+```html
+  <script>
+  const likeButtons = document.querySelectorAll('.like-button')
+  
+  likeButtons.forEach(button => {
+    button.addEventListener('click',function(event){    
+      const articleId = event.target.dataset.id   
+      axios.defaults.headers.common['X-Requested-With'] = 'XMLHttpRequest'
+      axios.defaults.xsrfCookieName = 'csrftoken'
+      axios.defaults.xsrfHeaderName = 'X-CSRFToken'
+             
+      {% if user.is_authenticated %}
+      axios.post(`/articles/${articleId}/like/`)
+        .then(response => {
+          document.querySelector(`#like-count-${articleId}`).innerHTML = response.data.count
+
+          if(response.data.liked){
+            event.target.style.color ='crimson'
+          }else{
+            event.target.style.color ='black'
+          }
+        })
+        .catch(error => {
+          console.log(error)
+        })
+      {% else %}
+        alert('로그인을 해야 사용할 수 있습니다.')
+      {% endif %}
+      
+    })
+  })
+  </script>
+```
+
+
 
