--- a/19.hphk_heroku_deploy.md
+++ b/19.hphk_heroku_deploy.md
@@ -10,6 +10,7 @@
 - gitignore 파일 생성 (https://www.gitignore.io/api/venv,django,visualstudiocode)
     - .gitignore 파일에 내용추가
     ```
+    ...
     *.bak
     *.sqlite3
     .venv
@@ -84,9 +85,9 @@ $ pip freeze > requirements.txt
 
 ### 3. 배포
 
-- herocu cli 검색
+- herocu cli 검색 (https://devcenter.heroku.com/articles/heroku-cli)
 - herocu 64bit 설치
-  ![image-20191125104828632](../박경희/2-1.빅데이터_Iot과정/md_img/image-20191125104828632.png)
+  ![image-20191125104828632](./md_img/image-20191125104828632.png)
 
   -> 설치하면 herocu cli 기반으로 사용할 수 있음
 
@@ -94,7 +95,7 @@ $ pip freeze > requirements.txt
 
 - 터미널에서 heroku login 입력
 
-![image-20191125105507978](../박경희/2-1.빅데이터_Iot과정/md_img/image-20191125105507978.png)
+![image-20191125105507978](./md_img/image-20191125105507978.png)
 
 ```bash
 # 프로젝트 폴더 내에서 ex)what_to_eat
@@ -105,22 +106,19 @@ $ heroku config:set DEBUG=True
 
 - 위 설정이 안될 경우
 - heroku.com 대시보드 > Settings > Reveal Config Vars버튼 클릭
-![image-20191125111929210](../박경희/2-1.빅데이터_Iot과정/md_img/image-20191125111929210.png)
+![heroku1](C:\Users\kyung\Pictures\heroku1.png)
 - SECRET_KEY 설정
-![image-20191125111801248](../박경희/2-1.빅데이터_Iot과정/md_img/image-20191125111801248.png)
+![1574941570827](C:\Users\kyung\AppData\Roaming\Typora\typora-user-images\1574941570827.png)
 
 ```bash
 $ heroku --version
 heroku/7.35.0 win32-x64 node-v12.13.0
 ```
-
+- heroku 서버에 배포
 ```bash
-#heroku 서버에 배포
 #what_to_eat (master)
 $ git push heroku master
 ```
-
-![image-20191125113922139](../박경희/2-1.빅데이터_Iot과정/md_img/image-20191125113922139.png)
 
 - db가 sqlite 인경우 migrate
 
@@ -131,7 +129,7 @@ $ heroku run python manage.py migrate
 
 
 
-- config/settings.py 설정
+- config/settings.py : 도메인 설정
 
 ```python
 #heroku full name 설정
