heroku 배포시 예외사항 내용추가

--- a/19.hphk_heroku_deploy.md
+++ b/19.hphk_heroku_deploy.md
@@ -141,3 +141,20 @@ ALLOWED_HOSTS = ['sleepy-thicket-13178.herokuapp.com']
 $ git push heroku master
 ```
 
+
+
+- heroku에 배포시에 아래와 같이 오류발생할 경우
+
+```bash
+$ git push heroku master
+fatal: 'heroku' does not appear to be a git repository
+fatal: Could not read from remote repository.
+```
+
+- 다음 명령어 실행 후 서버배포
+
+```bash
+$ heroku git:remote -a <yourapp>
+$ git push heroku master
+```
+
