--- a/20.hphk_project.md
+++ b/20.hphk_project.md
@@ -1,6 +1,6 @@
 ## Django & MySql 연동
 
-- 가상환경과 Django 설정이 완료 한 후 진행해야함, 가상환경 및 Django 세팅은 이전 강의 참고
+- 가상환경과 Django 설정을 완료 한 후 진행해야함, 가상환경 및 Django 세팅은 이전 강의 참고
 
 - MySql 연동 관련 모듈설치
 
